--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body {
     background-image: url("../images/background.jpg");
-    height: 100%; 
+    height: 120%; 
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -16,15 +16,43 @@ body {
       opacity: 0.8;
       min-height: 100px;
       border-radius: 10px;
-  }
-
-  .btn-danger{
-      width: 100%;
+      margin-top: 10px;
   }
 
   #playerName{
-      width: 100%;
+      width: 50%;
+      opacity: .8;
+      border: 1px solid transparent;
+      border-radius: 5px;
       text-align: center;
+      margin-bottom: 5px;
+      margin-right: 5px;
+      padding-top: 0.375rem;
+      padding-bottom: 0.375rem;
   }
 
+  .jumbotron{
+    opacity: 0.8;
+    margin-top: 15px; 
+    margin-bottom: 15px;
+  }
 
+  #welcomeMessage, #gameMessage{
+      color: white;
+  }
+
+  #userChat{
+    opacity: 0.8;
+  }
+
+.choice{
+    border-style: solid;
+    margin-bottom: 5px;
+    border-color: black;
+    border-width: 1px;
+    border-radius: 5px;
+}
+
+.choice:hover{
+    background-color: #dc3545;
+}
